Fix alignment of footer invite button

--- a/static/skeleton.css
+++ b/static/skeleton.css
@@ -46,6 +46,7 @@ header {
 
 #footer_invite_link {
     height: 50%;
+    transform: translate(0, 25%);
 }
 
 #footer_add_to_server {
